date.
[2962916] Save toolbar button only enabled if database is R/W and has been
changed since last saved.
[2962847] Fix password length checking to be between 4 and 1024 during
menu Generate Password option & Password Policy setting as per previous
releases.
[2960709] Entry selected prior to workstation locking is reselected on
being restored after unlocking the workstation.
[2951871] Shortcut related menu items now returned to the Edit menu and
the "Run Command", "Browse to URL", "Browse to URL + Autotype" and
"Send email" functions now work again, when a Shortcut entry is selected.
[2897661, 2779654] Group expand/collapse state restored after the database
is Locked, Minimized or "AutoType with Minimize" and then Restored.
[] Use of External Editor on Notes field from Edit dialog now activates Apply
and OK buttons.
[] Fix errors if importing an XML file with entries with duplicate unique IDs
(UUID elements).
[] Remove obsolete preference to "Confirm Deletion of Entries" from the miscellaneous
Options page. The user has the Undo/Redo feature to cater for this. Users are always
asked to confirm the deletion of Groups or entries that have aliases or shortcuts.

New Features for 3.21
=====================
[2940756] Add "Apply" button to Edit property pages so that
intermediate changes can be saved without closing the Edit property pages.
[2919319] PasswordSafe can now be used as a password generator via the
Manage menu.
[2616175] Allows user to retry finding the original database if not
successfully found the first time.
[] Undo/Redo of changes to the currently open database. Any change to
the database can now be undone and redone, as long as the database is
open. This is similar to the undo/redo feature available in most word
processors, and is activated the same way (Ctrl-Z for undo, Ctrl-Y for
redo, or via the Edit menu).
[] New Synchronize feature (subset of the current Merge function) to
allow changes in the fields of entries of two databases to be